# SystemGuardian-AI

./: .editorconfig  .gitignore  README.md  implemt_plan.md  package-lock.json  package.json  solution_architecture.md
.github/workflows/: build-windows.yml  ci.yml  release.yml
apps/desktop/frontend/: eslint.config.mjs  next.config.ts  package.json
apps/desktop/frontend/src/: declarations.d.ts
apps/desktop/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/frontend/src/app/(dashboard)/: layout.tsx
apps/desktop/frontend/src/app/(dashboard)/ai-assistant/: page.tsx
apps/desktop/frontend/src/app/(dashboard)/hardware/: page.tsx
apps/desktop/frontend/src/app/(dashboard)/incidents/: page.tsx
apps/desktop/frontend/src/app/(dashboard)/network/: page.tsx
apps/desktop/frontend/src/app/(dashboard)/overview/: page.tsx
apps/desktop/frontend/src/components/dashboard/: HealthScoreRing.tsx  MetricsStrip.tsx  RecentEvents.tsx
apps/desktop/frontend/src/components/events/: AIInsightCard.tsx  EventDetailModal.tsx
apps/desktop/frontend/src/components/layout/: NotificationBell.tsx  OnboardingWrapper.tsx  Sidebar.tsx  SplashWrapper.tsx  TopBar.tsx  WindowControls.tsx
apps/desktop/frontend/src/components/onboarding/: OnboardingWizard.tsx
apps/desktop/frontend/src/components/reports/: ReportViewerModal.tsx
apps/desktop/frontend/src/hooks/: use-websocket.ts  useBackendStatus.ts
apps/desktop/frontend/src/lib/: api-client.ts  types.ts
apps/desktop/frontend/src/stores/: event-store.ts  health-store.ts  incident-store.ts  ui-store.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
backend/: README.md  fix_mypy.py  init_db.py  pyproject.toml  test_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 753f503bb8a7_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  assistant.py  base.py  explanation_engine.py  fallback_provider.py  prompts.py
backend/app/ai/providers/: __init__.py  gemini.py  ollama.py
backend/app/api/: __init__.py  websocket.py
backend/app/api/v1/: __init__.py  ai_status.py  chat.py  events.py  health_score.py  incidents.py  metrics.py  notifications.py  predictions.py  reports.py  security.py  settings.py  system.py
backend/app/collectors/: __init__.py  base.py  normalizer.py  orchestrator.py  registry.py
backend/app/collectors/windows/: __init__.py  application_collector.py  driver_collector.py  hardware_collector.py  network_collector.py  performance_collector.py  power_collector.py  security_collector.py  storage_collector.py
backend/app/core/: __init__.py  database.py  event_bus.py  repository.py  scheduler.py  settings_manager.py
backend/app/domain/: __init__.py  enums.py
backend/app/engines/: __init__.py  health_score.py  prediction_engine.py  security.py
backend/app/engines/predictors/: __init__.py  base.py  memory_exhaustion.py  storage_exhaustion.py
backend/app/models/: __init__.py  ai_insight.py  chat_message.py  disk_metric.py  event.py  hardware_metric.py  health_score.py  incident.py  network_metric.py  notification.py  prediction.py  report.py  setting.py
backend/app/notifications/: manager.py
backend/app/processors/: __init__.py  correlator.py  enricher.py  pipeline.py  severity.py
backend/app/reports/: builder.py
backend/app/reports/exporters/: factory.py
backend/app/repositories/: __init__.py  ai_insight_repository.py  chat_message_repository.py  event_repository.py  health_score_repository.py  incident_repository.py  metric_repository.py  notification_repository.py  prediction_repository.py  report_repository.py  setting_repository.py
backend/app/schemas/: __init__.py  chat.py  event.py  health.py  health_score.py  incident.py  metrics.py  other.py
backend/tests/: conftest.py  test_event_bus.py  test_phase0_gate.py  test_phase1_domain.py  test_phase3_pipeline.py  test_phase3_scheduler.py
backend/tests/collectors/: __init__.py  conftest.py  test_base_collector.py  test_network_collector.py  test_normalizer.py  test_orchestrator.py  test_performance_collector.py  test_power_collector.py  test_registry.py  test_security_collector.py  test_storage_collector.py
docs/: README.md
scripts/: build.ps1  dev.ps1  test.ps1
shared/types/: index.ts
(+5 files in other folders)
