[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-guardian-ai-backend"
version = "0.1.0"
description = "SystemGuardian AI — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Data validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Background scheduling
    "apscheduler>=3.10.4",

    # HTTP client (for AI providers)
    "httpx>=0.28.0",

    # Structured logging
    "structlog>=24.4.0",

    # Windows monitoring
    "psutil>=6.1.0",
    "pywin32>=308; sys_platform == 'win32'",
    "wmi>=1.5.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",        # for TestClient

    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Type stubs
    "types-psutil",

    # Test fixtures
    "anyio[trio]>=4.7.0",
    "factory-boy>=3.3.1",
]
prod = [
    # Production-only extras
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "alembic*"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode      = "auto"
testpaths         = ["tests"]
addopts           = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=62"
filterwarnings    = [
    "ignore::DeprecationWarning:sqlalchemy",
]

[tool.coverage.run]
omit = [
    # Windows-only collector implementations — not executable in CI
    "app/collectors/windows/application_collector.py",
    "app/collectors/windows/driver_collector.py",
    "app/collectors/windows/hardware_collector.py",
    "app/collectors/windows/network_collector.py",
    "app/collectors/windows/storage_collector.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ─── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "N", "S", "ANN"]
ignore = [
    "S101",     # Use of assert (ok in tests)
]
# B008: FastAPI Query/Depends are intentional function calls in default args

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]
"app/api/*" = ["B008", "ANN"]
"app/reports/exporters/factory.py" = ["E501"]
"app/collectors/windows/*.py" = ["E501"]
"app/core/scheduler.py" = ["E501"]
"app/engines/prediction_engine.py" = ["N806"]
"app/engines/predictors/*.py" = ["E501"]
"app/notifications/manager.py" = ["ANN401"]
"app/reports/builder.py" = ["E501", "ANN001"]
"app/api/websocket.py" = ["ANN401"]
"app/ai/assistant.py" = ["E501"]
"app/ai/prompts.py" = ["E501"]
"app/api/v1/reports.py" = ["E501", "B904"]

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict         = true
exclude        = ["tests/", "alembic/"]
plugins        = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["win32evtlog", "win32api", "wmi", "pywintypes"]
ignore_missing_imports = true
