[package]
name = "system-guardian-ai"
version = "0.1.0"
description = "SystemGuardian AI — AI-powered OS monitoring platform"
authors = ["SystemGuardian AI Team"]
license = "MIT"
repository = "https://github.com/Jkotwal01/SystemGuardian-AI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

[profile.release]
# Optimize for binary size in release builds
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
